tests/machine/x/kotlin/q2.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
tests/machine/x/kotlin/q2.kt:55:57: error: type mismatch: inferred type is Nation but Supplier was expected
                __res.add(mutableMapOf("s" to s, "n" to n))
                                                        ^
tests/machine/x/kotlin/q2.kt:78:42: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type MutableMap<String, Any?>?
                    if (ps.ps_suppkey == (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_suppkey"]) {
                                         ^
tests/machine/x/kotlin/q2.kt:79:63: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type MutableMap<String, Any?>?
                        __res.add(mutableMapOf("s_acctbal" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_acctbal"], "s_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_name"], "n_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["n"]["n_name"], "p_partkey" to p.p_partkey, "p_mfgr" to p.p_mfgr, "s_address" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_address"], "s_phone" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_phone"], "s_comment" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_comment"], "ps_supplycost" to ps.ps_supplycost))
                                                              ^
tests/machine/x/kotlin/q2.kt:79:146: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type MutableMap<String, Any?>?
                        __res.add(mutableMapOf("s_acctbal" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_acctbal"], "s_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_name"], "n_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["n"]["n_name"], "p_partkey" to p.p_partkey, "p_mfgr" to p.p_mfgr, "s_address" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_address"], "s_phone" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_phone"], "s_comment" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_comment"], "ps_supplycost" to ps.ps_supplycost))
                                                                                                                                                 ^
tests/machine/x/kotlin/q2.kt:79:226: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type MutableMap<String, Any?>?
                        __res.add(mutableMapOf("s_acctbal" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_acctbal"], "s_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_name"], "n_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["n"]["n_name"], "p_partkey" to p.p_partkey, "p_mfgr" to p.p_mfgr, "s_address" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_address"], "s_phone" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_phone"], "s_comment" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_comment"], "ps_supplycost" to ps.ps_supplycost))
                                                                                                                                                                                                                                 ^
tests/machine/x/kotlin/q2.kt:79:359: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type MutableMap<String, Any?>?
                        __res.add(mutableMapOf("s_acctbal" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_acctbal"], "s_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_name"], "n_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["n"]["n_name"], "p_partkey" to p.p_partkey, "p_mfgr" to p.p_mfgr, "s_address" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_address"], "s_phone" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_phone"], "s_comment" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_comment"], "ps_supplycost" to ps.ps_supplycost))
                                                                                                                                                                                                                                                                                                                                                                      ^
tests/machine/x/kotlin/q2.kt:79:443: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type MutableMap<String, Any?>?
                        __res.add(mutableMapOf("s_acctbal" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_acctbal"], "s_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_name"], "n_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["n"]["n_name"], "p_partkey" to p.p_partkey, "p_mfgr" to p.p_mfgr, "s_address" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_address"], "s_phone" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_phone"], "s_comment" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_comment"], "ps_supplycost" to ps.ps_supplycost))
                                                                                                                                                                                                                                                                                                                                                                                                                                                          ^
tests/machine/x/kotlin/q2.kt:79:527: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type MutableMap<String, Any?>?
                        __res.add(mutableMapOf("s_acctbal" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_acctbal"], "s_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_name"], "n_name" to (s as MutableMap<String, MutableMap<String, Any?>>)["n"]["n_name"], "p_partkey" to p.p_partkey, "p_mfgr" to p.p_mfgr, "s_address" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_address"], "s_phone" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_phone"], "s_comment" to (s as MutableMap<String, MutableMap<String, Any?>>)["s"]["s_comment"], "ps_supplycost" to ps.ps_supplycost))
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              ^
tests/machine/x/kotlin/q2.kt:96:22: error: none of the following functions can be called with the arguments supplied: 
public fun <T : Comparable<???>> Iterable<???>.min(): ??? defined in kotlin.collections
@SinceKotlin public fun Iterable<Double>.min(): Double? defined in kotlin.collections
@SinceKotlin public fun Iterable<Float>.min(): Float? defined in kotlin.collections
val min_cost = costs.min() ?: 0
                     ^
